--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,20 @@
-#
-# This file contains configuration flags to customize your site
-#
 
-# Name of your site (displayed in the header)
 name: __SITE_NAME__
-
-# Short bio or description (displayed in the header)
 description: __DESCRIPTION__
+url: __URL__
+basedomain: __BASEDOMAIN__
+
+# Color scheme based on http://flatuicolors.com/.
+# Possible values:
+# - default
+# - dark
+# - turquoise
+# - green
+# - blue
+# - purple
+# - orange
+# - red
+color: red
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /static/img/avatar.jpg
@@ -17,32 +25,10 @@ avatar: /static/img/avatar.jpg
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: 
-  instagram: 
-  linkedin:
-  pinterest:
   rss: true # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: #jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
 
 related-sites:
 
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: __URL__
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
 #
@@ -73,6 +59,7 @@ exclude:
     - Gemfile.lock
     - LICENSE
     - README.md
+    - CNAME
 paginate: 10
 paginate_path: "page:num"
 
