--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
-title: __SITE_NAME__
-description: __DESCRIPTION__
-url: __URL__
-basedomain: __BASEDOMAIN__
+title: Elegant Wedding Dresses
+description: there are many beautiful wedding dresses for you
+url: zhumond.github.io
+basedomain: novstyles.com G
 
 
 #####################
