--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Elegant Wedding Dresses
 description: there are many beautiful wedding dresses for you
 url: zhumond.github.io
-basedomain: novstyles.com G
+basedomain: novstyles.com
 
 
 #####################
